# MaPL

./: .gitignore  .gitmodules  LICENSE  README.md
Compiler/: CMakeLists.txt  MaPL.g4  MaPLLexer.g4  MaPLParser.g4  README.md  build_parser.sh  generate_parser.sh  testInput.mapl
Compiler/Headers/: MaPLCompiler.h
Compiler/MaPLCompiler/: MaPLAPI.cpp  MaPLAPI.h  MaPLBuffer.cpp  MaPLBuffer.h  MaPLCompilerHelpers.cpp  MaPLCompilerHelpers.h  MaPLFile.cpp  MaPLFile.h  MaPLFileCache.cpp  MaPLVariableStack.cpp  MaPLVariableStack.h  main.cpp
Compiler/MaPLCompiler.xcodeproj/: project.pbxproj
Compiler/MaPLCompiler.xcodeproj/xcshareddata/xcschemes/: MaPLCompiler.xcscheme  MaPLCompilerExecutable.xcscheme
Compiler/Xcode/: updateBytecodes.swift
Compiler/Xcode/Headers/: MaPLCompiler.h
Compiler/Xcode/MaPLCompiler/: MaPLBuffer.cpp  MaPLBuffer.h  MaPLBytecodeConstants.h  MaPLCompilerContext.cpp  MaPLCompilerContext.h  MaPLCompilerHelpers.cpp  MaPLCompilerHelpers.h  MaPLFile.cpp  MaPLFile.h  MaPLFileCache.cpp  MaPLFileCache.h  MaPLVariableStack.cpp  MaPLVariableStack.h  main.cpp
Compiler/Xcode/MaPLCompiler.xcodeproj/: project.pbxproj
Compiler/Xcode/MaPLCompiler.xcodeproj/xcshareddata/xcschemes/: MaPLCompiler.xcscheme  MaPLCompilerExecutable.xcscheme
Compiler/generated_c++/: MaPLLexer.cpp  MaPLLexer.h  MaPLParser.cpp  MaPLParser.h
Compiler/tests/: API.mapl  testInput.mapl
Generator/: CMakeLists.txt  README.md
Generator/EaSL/: EaSL.g4  README.md  build_parser.sh  exampleSchema.easl  exampleScript.mapl  exampleXML.xml  generate_parser.sh
Generator/EaSL/generated_c++/: EaSLLexer.cpp  EaSLLexer.h  EaSLParser.cpp  EaSLParser.h
Generator/Executable/: MaPLGeneratorAPI.mapl
Generator/MaPLGenerator/: EaSLHandler.cpp  EaSLHandler.h  ErrorLogger.cpp  ErrorLogger.h  MaPLGeneratorCollections.h  MaPLHandler.cpp  MaPLHandler.h  MaPLInterface.h  MaPLSymbols.h  XmlHandler.cpp  XmlHandler.h  main.cpp
Generator/MaPLGenerator.xcodeproj/: project.pbxproj
Generator/MaPLGenerator.xcodeproj/xcshareddata/xcschemes/: MaPLGenerator.xcscheme
Generator/Templates/C#/: MaPLGeneratorSerialized.mapl  classBase.mapl  enums.mapl
Generator/Templates/C++/: MaPLGeneratorSerialized.mapl  MaPLInterface.mapl  bytecodesHeader.mapl  class.mapl  classHeader.mapl  classHeaderBase.mapl  classImplementation.mapl  classImplementationBase.mapl  enums.mapl  main.mapl  namespaceHeader.mapl  scriptBindings.mapl  umbrellaHeader.mapl
Generator/Templates/GodotC#/: MaPLGeneratorSerialized.mapl  class.mapl  classBase.mapl  enums.mapl
Generator/Templates/MaPL/: main.mapl
Generator/Templates/Swift/: MaPLGeneratorSerialized.mapl  class.mapl  classBase.mapl  enums.mapl  main.mapl
Generator/Templates/XMLtoBinary/: appendNode.mapl  main.mapl
Generator/Templates/strings/: main.mapl  writeStringsForNode.mapl
Runtime/: README.md
Runtime/Headers/: MaPLRuntime.h
Runtime/MaPLRuntime/: MaPLRuntime.c  MaPLRuntime.h  main.c
Runtime/MaPLRuntime.xcodeproj/: project.pbxproj
Shared/: MaPLBytecodeConstants.h  MaPLTypedefs.h  updateBytecodes.swift
Shared/Headers/: MaPLTypedefs.h
Tests/: README.md
Tests/ErrorScripts/: ambiguousFunction.mapl  ambiguousLiteralComparison.mapl  ambiguousLiteralParameter.mapl  ambiguousNumericLiteral.mapl  ambiguousSubscript.mapl  badOperatorAdd.mapl  badOperatorAddAssign.mapl  badOperatorBitshift.mapl  badOperatorBitshiftAssign.mapl  badOperatorBitwiseNegation.mapl  badOperatorMultiply.mapl  badOperatorMultiplyAssign.mapl  badOperatorNegatedUnsigned.mapl  badOperatorNullCoalesce.mapl  badOperatorNumericNegation.mapl  badOperatorPointerToMember.mapl  badOperatorSubscript.mapl  bitshiftOperatorSpace.mapl  castPointerToPrimitive.mapl  castPrimitiveToPointer.mapl  castSiblingPointers.mapl  castUnrelatedPointers.mapl  conditionalTypeMismatchPointer.mapl  conditionalTypeMismatchPrimitive.mapl  expectingType.mapl  functionCollisionGlobal.mapl  functionCollisionWithSupertype.mapl  functionCollisionWithinType.mapl  genericCountMismatch.mapl  genericDescriptorConflict.mapl  genericDuplicateDescriptor.mapl  genericFunctionConflict.mapl  genericImproperNesting.mapl  genericNestedCollision.mapl  genericRevealedCollision.mapl  genericSubscriptConflict.mapl  genericSupertype.mapl  importDuplicate.mapl  importMissing.mapl  inheritanceCycle.mapl  (+26 more)
Tests/MaPLTester/: MaPLDecompiler.cpp  MaPLDecompiler.h  TestSymbols.h  main.cpp
Tests/MaPLTester.xcodeproj/: project.pbxproj
Tests/Scripts/: TestAPI.mapl
Tests/Scripts/cast/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/conditional/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/controlFlow/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/deadCodePath/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/declareCharVariable/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/declareVariable/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/dependency/: dependentScript1.mapl  dependentScript2.mapl  dependentScript3.mapl  expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/duplicateDependency/: dependency1.mapl  dependency2.mapl  expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  expectedPrintOutput.txt  script.mapl
Tests/Scripts/generics/: expectedBytecode.maplb  expectedBytecodeDebug.maplb  expectedCallbacks.txt  expectedCallbacksDebug.txt  script.mapl
(+44 files in other folders)
